# end-to-end-datascience

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: python-app.yml
model/: MLmodel  model.pkl
notebooks/: 01_experiment.ipynb
src/: __init__.py  data.py  modelling.py  train.py
test/: test_foo.py
tests/: test_data.py
