[tool.poetry]
name = "datascience-end-to-end"
version = "0.1.0"
description = ""
authors = ["Kay Hoogland <kayhoogland@hey.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
scikit-learn = "^1.0"
scikit-lego = "^0.6.8"
gin-config = "^0.4.0"
jupyterlab = "^3.2.1"
flake8 = "^4.0.1"
black = "^21.9b0"
mypy = "^0.910"
pytest = "^6.2.5"
nb-black = "^1.0.7"
memo = "pandas-profiling"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
