[tool.poetry]
name = "datascience-end-to-end"
version = "0.1.0"
description = ""
authors = ["Kay Hoogland <kayhoogland@hey.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
scikit-learn = "^1.0"
scikit-lego = "^0.6.8"
gin-config = "^0.4.0"
mlflow = "^1.20.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.1"
flake8 = "^4.0.1"
black = "^21.9b0"
mypy = "^0.910"
pytest = "^6.2.5"
memo = "^0.2.2"
pylint = "^2.11.1"
ipython = "^8.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
