[tool.poetry]
name = "datascience-end-to-end"
version = "0.1.0"
description = ""
authors = ["Kay Hoogland <kayhoogland@hey.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
fastapi = "^0.70"
scikit-learn = "^1.0"
scikit-lego = "^0.6"
gin-config = "^0.4"
mlflow = "^1.20"
typer = "^0.4"
llvmlite = "^0.38.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2"
flake8 = "^4.0"
mypy = "^0.910"
pytest = "^6.2"
memo = "^0.2"
pylint = "^2.11"
ipython = "^8.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
